syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_line.proto";
import "product_order.proto";

message ProductionStationAlarmInfo {
	//ID 
 	string id=2;
	//创建时间 
 	string createTime=3;
	//创建人员ID 
    string createUserID=4;
    string createUserName=17;
	//生产工站ID 
    string productionStationID=5;
    ProductionStationInfo productionStation=14;
	//生产工序ID 
    string productionProcessID=6;
    ProductionProcessInfo productionProcess=15;
	//产品信息ID 
    string productInfoID=7;
    ProductInfoInfo productInfo=16;
	//报警编号 
 	string alarmNo=8;
	//报警信息 
 	string alarmMessage=9;
	//当前状态 
 	string currentState=10;
	//处理方式 
 	string handleMethod=11;
	//处理时间 
 	string handleTime=12;
	//备注信息 
 	string remark=13;
}

message QueryProductionStationAlarmRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//创建时间开始
    // @inject_tag: uri:"createTime0" form:"createTime0"
    string createTime0=5;
    //创建时间结束
    // @inject_tag: uri:"createTime1" form:"createTime1"
    string createTime1=6;
	//生产产线ID
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=14;
    //生产工单号
    // @inject_tag: uri:"productOrderNo" form:"productOrderNo"
    string productOrderNo=15;
    //产品序列号
    // @inject_tag: uri:"productSerialNo" form:"productSerialNo"
    string productSerialNo=16;
    //报警信息
    // @inject_tag: uri:"alarmMessage" form:"alarmMessage"
    string alarmMessage=17;
}

message QueryProductionStationAlarmResponse{
    Code code=1;
    string message=2;
    repeated ProductionStationAlarmInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductionStationAlarmResponse{
    Code code=1;
    string message=2;
    repeated ProductionStationAlarmInfo data=3;
}

message GetProductionStationAlarmDetailResponse{
    Code code=1;
    string message=2;
    ProductionStationAlarmInfo data=3;
}